# MultiModal-RAG

./: .gitignore  README.md  main.py  pyproject.toml  template.py
notebooks/: mmrag.ipynb
src/llm/: base.py
src/text_loaders/: loader.py
