[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "langchain>=1.2.10",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "pymupdf4llm>=0.3.4",
]
